--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -107,7 +107,7 @@
 				{
 					"title": "Co-founder",
 					"start": "May ’16",
-					"end": "Aug ’18",
+					"end": "Aug ’18"
 				}
 			],
       "url": "https://www.bookbooster.us",
