copy: Tweak title

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -8,7 +8,7 @@
       "url": "https://www.boostmyschool.com",
 			"positions": [
 				{
-					"title": "Co-founder",
+					"title": "Founder",
 					"start": "Feb ’16",
 					"end": "Current"
 				}
