feat: Add link to interview

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -20,6 +20,10 @@
       "press": [
         [
           {
+            "url": "https://ideamensch.com/holman-gao/",
+            "text": "Interview with Idea Mensch"
+          },
+          {
             "url": "http://www.mbhsmagnet.org/news/summer16/gao",
             "text": "Interview with my high school"
           }
