feat: Update order of projects

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -55,7 +55,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Timeline of where I have worked. Currently working on BoostMySchool, BookBooster, and taking on various contracting projects."
+          "content": "Timeline of where I have worked. Currently working on BoostMySchool."
         }
       ],
 			"title": "Work"
