copy: Update portfolio language

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -9,7 +9,7 @@
       "meta": [
         {
           "name": "description",
-          "content": "I'm available for high-level, early-stage tech consulting work. In New York or remote. The core of my experience has been full-stack web and mobile development at early-stage companies."
+          "content": "I'm available for high-level, remote-only early-stage tech consulting work. The core of my experience has been full-stack web and mobile development at early-stage tech companies."
         }
       ]
     },
@@ -45,7 +45,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao, software engineer turned entrepreneur living in New York."
+          "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao."
         }
       ],
 			"title": "Software Developer Portfolio | Holman Gao",
