copy: Update langauge

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -9,7 +9,7 @@
       "meta": [
         {
           "name": "description",
-          "content": "I'm available for high-level, remote-only early-stage tech consulting work. The core of my experience has been full-stack web and mobile development at early-stage tech companies."
+          "content": "I'm available for high-level, remote tech consulting work. My background is in full-stack web and mobile development at early-stage, venture-backed tech companies."
         }
       ]
     },
