copy: Update portfolio title language

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -48,7 +48,7 @@
           "content": "Collection of professional and hobby websites and mobile apps worked on by Holman Gao."
         }
       ],
-			"title": "Software Developer Portfolio | Holman Gao",
+			"title": "Software Portfolio | Holman Gao",
 			"titleTemplate": "%s"
 		},
 		"workProjects": {
